// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Back link Text 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <a
        className="back"
        href="#"
      >
        Back
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Breadcrumbs Text 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <nav
        class="breadcrumbs"
      >
        <ol>
          <li>
            <a
              href="#"
            >
              Section
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              Subsection
            </a>
          </li>
          <li>
            Subsection
          </li>
        </ol>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Button 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={false}
        id={null}
        onClick={[Function]}
        type="button"
        value="Start now >"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={true}
        id={null}
        onClick={[Function]}
        type="button"
        value="Start now >"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Disabled Submit 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={true}
        id={null}
        onClick={null}
        type="submit"
        value="Start now >"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Disabled Warning 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        className="warning"
        disabled={true}
        id={null}
        onClick={null}
        type="submit"
        value="Start now >"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Link 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <a
        className="button"
        href="#"
        id={null}
      >
        Start now &gt;
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Secondary 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        className="secondary"
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Start now >"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Standard 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={false}
        id={null}
        onClick={null}
        type="button"
        value="Start now >"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Start 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <a
        className="button start"
        href="#"
        id={null}
      >
        Start now &gt;
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Submit 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Start now >"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Warning 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flex-direction": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        className="warning"
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Start now >"
      />
    </div>
  </div>
</div>
`;
